<resources>
    <string name="app_name">Tochaku</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="username">ユーザー名</string>
    <string name="email">メールアドレス</string>
    <string name="destinationcound">目的地登録件数</string>
    <string name="Profile">プロフィール</string>
    <string name="Logout">ログアウト</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>
</resources>
