<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.techacademy.wakabayashi.kojiro.tochaku.SettingActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="150dp"
        android:layout_height="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/email"
        app:layout_constraintRight_toRightOf="@+id/userNameText"
        app:layout_constraintLeft_toLeftOf="@+id/userNameText"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/userNameText" />

    <TextView
        android:id="@+id/DestsText"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/destinationcound"
        app:layout_constraintRight_toRightOf="@+id/EmailText"
        app:layout_constraintLeft_toLeftOf="@+id/EmailText"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/EmailText" />/>


    <Button
        android:id="@+id/ProfileButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/Profile"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/LogoutButton"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/listView" />

    <Button
        android:id="@+id/LogoutButton"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:text="@string/Logout"
        app:layout_constraintTop_toTopOf="@+id/ProfileButton"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/listView" />

    <ListView
        android:layout_width="364dp"
        android:layout_height="319dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/listView"
        tools:layout_editor_absoluteY="184dp"
        app:layout_constraintHorizontal_bias="0.0" />




</android.support.constraint.ConstraintLayout>
